# DemoServer

./: .gitignore  CMakeLists.txt  main.cpp  server_http.hpp
cmake/: FindMongoose.cmake
public/: index.html
public/css/: styles.css
public/js/: bootstrap-tooltip.js  jquery.toaster.js  modal.js
